--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,12 @@
 [package]
 name = "ibig-rs"
-version = "0.1.0"
+version = "0.0.0"
 authors = ["Tomek Czajka <tczajka@gmail.com>"]
 edition = "2018"
+description = "Big integer library"
+keywords = ["bigint", "bignum"]
+license = "MIT"
+repository = "https://github.com/tczajka/ibig-rs"
+homepage = "https://github.com/tczajka/ibig-rs"
 
 [dependencies]
