--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,8 @@ version = "0.0.0"
 authors = ["Tomek Czajka <tczajka@gmail.com>"]
 edition = "2018"
 description = "Big integer library"
-keywords = ["bigint", "bignum"]
+keywords = ["bigint", "bignum", "mathematics"]
+categories = ["mathematics", "no-std"]
 license = "MIT"
 repository = "https://github.com/tczajka/ibig-rs"
 homepage = "https://github.com/tczajka/ibig-rs"
