--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ categories = ["mathematics", "no-std"]
 license = "MIT"
 repository = "https://github.com/tczajka/ibig-rs"
 homepage = "https://github.com/tczajka/ibig-rs"
+readme = "README.md"
 
 [dependencies]
 
