Fix CI test 16-bit

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -64,7 +64,8 @@ jobs:
           override: true
       - uses: actions-rs/cargo@v1
         with:
-          command: test --features force-16-bit
+          command: test
+          args: --features force-16-bit
 
   build-no-std:
     name: Build no-std
