Fix x86 sub_with_borrow

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -27,7 +27,7 @@ jobs:
       - uses: actions-rs/toolchain@v1
         with:
           profile: minimal
-          toolchain: stable-x86_64-unknown-linux-gnu
+          toolchain: stable
           override: true
       - uses: actions-rs/cargo@v1
         with:
@@ -43,12 +43,14 @@ jobs:
       - uses: actions-rs/toolchain@v1
         with:
           profile: minimal
-          toolchain: stable-i686-unknown-linux-gnu
+          toolchain: stable
           override: true
+          targets: i686-unknown-linux-gnu
       - run: sudo apt install gcc-multilib
       - uses: actions-rs/cargo@v1
         with:
           command: test
+          args: --target=i686-unknown-linux-gnu
 
   test-16-bit:
     name: Test 16-bit
