--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -43,14 +43,12 @@ jobs:
       - uses: actions-rs/toolchain@v1
         with:
           profile: minimal
-          toolchain: stable
+          toolchain: stable-i686-unknown-linux-gnu
           override: true
-          targets: i686-unknown-linux-gnu
       - run: sudo apt install gcc-multilib
       - uses: actions-rs/cargo@v1
         with:
           command: test
-          args: --target=i686-unknown-linux-gnu
 
   test-16-bit:
     name: Test 16-bit
