--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,9 +27,14 @@ default = ["std", "rand", "num-traits"]
 # Interface with the std library.
 std = []
 
-# Force 16-bit arithmetic.
-# For testing 16-bit implementation on non-16-bit architectures.
+# Force 16-bit word size without platform-specific code.
 force-16-bit = []
+
+# Force 32-bit word size without platform-specific code.
+force-32-bit = []
+
+# Force 64-bit word size without platform-specific code.
+force-64-bit = []
 
 [[test]]
 name = "random"
