--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ name = "ibig"
 version = "0.2.0"
 authors = ["Tomek Czajka <tczajka@gmail.com>"]
 edition = "2018"
-description = "Big integer library"
+description = "A big integer library with good performance"
 keywords = ["bigint", "bignum", "mathematics"]
 categories = ["mathematics", "no-std"]
 license = "MIT"
