--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ num-traits = { version = "0.2.14", default-features = false, optional = true }
 
 [dev-dependencies]
 rand = "0.8.3"
+criterion = { version = "0.3.4", features = ["html_reports"] }
 
 [features]
 default = ["std", "rand", "num-traits"]
@@ -37,3 +38,4 @@ required-features = ["rand"]
 [[bench]]
 name = "benchmarks"
 required-features = ["rand"]
+harness = false
