--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,6 +31,9 @@ force-16-bit = []
 force-32-bit = []
 force-64-bit = []
 
+[lib]
+bench = false
+
 [[test]]
 name = "random"
 required-features = ["rand"]
