--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,9 @@ homepage = "https://github.com/tczajka/ibig-rs"
 readme = "README.md"
 exclude = ["generate_coverage.sh"]
 
+[workspace]
+members = ["dev-tools"]
+
 [dependencies]
 static_assertions = "1.1"
 rand = { version = "0.8.3", default-features = false, optional = true }
