Change RadixInfo::for_radix to iterative instead of recursive

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ members = ["dev-tools"]
 
 [dependencies]
 static_assertions = "1.1"
+const_fn_assert = "0.1.2"
 rand = { version = "0.8.3", default-features = false, optional = true }
 num-traits = { version = "0.2.14", default-features = false, optional = true }
 
