--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -91,7 +91,7 @@ jobs:
       - uses: actions-rs/cargo@v1
         with:
           command: build
-          args: --no-default-features --features "rand, num-traits"
+          args: --no-default-features --features "rand, num-traits, serde"
 
   build-aarch64:
     name: Build aarch64
@@ -109,7 +109,7 @@ jobs:
       - uses: actions-rs/cargo@v1
         with:
           command: build
-          args: --target aarch64-unknown-linux-gnu
+          args: --target aarch64-unknown-linux-gnu --all-features
 
   fmt:
     name: Rustfmt
@@ -141,4 +141,4 @@ jobs:
       - uses: actions-rs/cargo@v1
         with:
           command: clippy
-          args: -- -D warnings
+          args: --all-features -- -D warnings
