--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,15 +17,17 @@ exclude = ["generate_coverage.sh"]
 members = ["dev-tools"]
 
 [dependencies]
-static_assertions = "1.1"
-const_fn_assert = "0.1.2"
 cfg-if = "1.0.0"
-rand = { version = "0.8.3", default-features = false, optional = true }
-num-traits = { version = "0.2.14", default-features = false, optional = true }
+const_fn_assert = "0.1.2"
+static_assertions = "1.1"
+num-traits = { optional = true, version = "0.2.14", default-features = false }
+rand = { optional = true, version = "0.8.3", default-features = false }
+serde = { optional = true, version = "1.0.130", default-features = false, features = ["derive"] }
 
 [dev-dependencies]
-rand = "0.8.3"
 criterion = { version = "0.3.4", features = ["html_reports"] }
+rand = "0.8.3"
+serde_test = "1.0.130"
 
 [features]
 default = ["std", "rand", "num-traits"]
@@ -39,6 +41,10 @@ bench = false
 [[test]]
 name = "random"
 required-features = ["rand"]
+
+[[test]]
+name = "serde"
+required-features = ["serde"]
 
 [[bench]]
 name = "benchmarks"
