--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -53,7 +53,9 @@ jobs:
           profile: minimal
           toolchain: stable-i686-unknown-linux-gnu
           override: true
-      - run: sudo apt install gcc-multilib
+      - run: |
+          sudo apt update
+          sudo apt install gcc-multilib
       - uses: actions-rs/cargo@v1
         with:
           command: test
