Remove extra keywords (5 is the limit).

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ authors = ["Tomek Czajka <tczajka@gmail.com>"]
 edition = "2018"
 rust-version = "1.49"
 description = "A big integer library with good performance"
-keywords = ["bigint", "bignum", "integer", "math", "mathematics", "modular", "modulo"]
+keywords = ["bigint", "bignum", "mathematics", "modular", "modulo"]
 categories = ["mathematics", "no-std"]
 license = "MIT OR Apache-2.0"
 repository = "https://github.com/tczajka/ibig-rs"
