--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -31,7 +31,7 @@ jobs:
       - uses: actions-rs/toolchain@v1
         with:
           profile: minimal
-          toolchain: "${{ matrix.toolchain }}$"
+          toolchain: ${{ matrix.toolchain }}
           override: true
       - uses: actions-rs/cargo@v1
         with:
@@ -45,7 +45,7 @@ jobs:
         bits: [16, 32, 64]
     runs-on: ubuntu-latest
     env:
-      RUSTFLAGS: -D warnings --cfg force_bits="${{ matrix.bits }}$"
+      RUSTFLAGS: -D warnings --cfg force_bits=${{ matrix.bits }}
     steps:
       - uses: actions/checkout@v4
       - uses: actions-rs/toolchain@v1
