--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -18,7 +18,7 @@ jobs:
           command: check
           args: --all-features --tests
 
-  check-msrv:
+  check-min-versions:
     name: Check minimal versions
     strategy: 
       matrix:
