Change dependencies. * rand is no longer a default dependency * num-traits is no longer optional

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -110,7 +110,7 @@ jobs:
       - uses: actions-rs/cargo@v1
         with:
           command: build
-          args: --no-default-features --features "rand, num-traits, serde"
+          args: --no-default-features --features "rand, serde"
 
   build-aarch64:
     name: Build aarch64
