--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,7 @@ exclude = ["generate_coverage.sh"]
 all-features = true
 
 [features]
-default = ["std", "rand", "num-traits"]
+default = ["std"]
 
 # Interface with the std library.
 std = []
@@ -29,7 +29,6 @@ version = "1.0.0"
 version = "1.1"
 
 [dependencies.num-traits]
-optional = true
 version = "0.2.14"
 default-features = false
 
